[B]3.0.0[/B]
- fixed: IMDb plot outline under some circumstances

[B]2.9.9[/B]
- fixed: Thumb for IMDb cast

[B]2.9.8[/B]
- fixed: IMDb outline for some movies

[B]2.9.7[/B]
- changed: attempt to scrape generic local title from IMDb if multiple are available

[B]2.9.6[/B]
- fixed: movie title issues after IMDb layout changes

[B]2.9.5[/B]
- fixed: IMDb Full credits after IMDb layout changes

[B]2.9.4[/B]
- fixed: USA certification rating due to IMDb changes

[B]2.9.3[/B]
- fixed: always get USA rating regardless of the country set

[B]2.9.2[/B]
- changed: simplify ratings code

[B]2.9.1[/B]
- changed: improved USA rating detection

[B]2.9.0[/B]
- added: multiple ratings and uniqueid support (requires Kodi v17)
- fixed: another attempt to fix IMDb outline

[B]2.8.8[/B]
- fixed: potential issue with IMDb outline (thanks scudlee)

[B]2.8.7[/B]
- fixed: IMDb countries

[B]2.8.6[/B]
- fixed: metacritic rating in further scenarios

[B]2.8.5[/B]
- fixed: metacritic rating

[B]2.8.4[/B]
- update author name

[B]2.8.3[/B]
- fixed: Keep Original Title for foreign movies

[B]2.8.2[/B]
- fixed: trying to fix IMDb outline

[B]2.8.1[/B]
- fixed: potential PCRE error due to non-clean regexp

[B]2.8.0[/B]
- fixed: won't scrape IMDb TOP250

[B]2.7.8[/B]
- fixed: add xml header

[B]2.7.7[/B]
- fixed: MetaCritic Score for 100/100 films

[B]2.7.6[/B]
- fixed: IMDb studio/director/writer after layout change

[B]2.7.5[/B]
- fixed: OutlineToPlot function
- fixed: USACert

[B]2.7.4[/B]
- fixed: MetaCritic Score

[B]2.7.3[/B]
- fixed: original title won't scrape in some cases

[B]2.7.2[/B]
- changed: make sure to parse the intended page

[B]2.7.1[/B]
- fixed: IMDb genre after layout change

[B]2.7.0[/B]
- fixed: IMDb scraping after layout changes

[B]2.6.2[/B]
- fixed: director(s) and writer(s) scraping in case of IMDbFull is selected

[B]2.6.1[/B]
- fixed: will scrape director(s) as writer(s)

[B]2.6.0[/B]
- updated: outfactored outline/studio/country/top250 to common library
[B]2.5.0[/B]