@@ -177,6 +177,9 @@
 			<RegExp input="$$1" output="&lt;outline&gt;\1&lt;/outline&gt;" dest="2">
 				<expression fixchars="1" trim="1">itemprop=&quot;description&quot;&gt;(.+?)&lt;a\shref=&quot;/title/[^/]*/plotsummary[^&quot;]*&quot;\s*&gt;See</expression>
 			</RegExp>
+			<RegExp input="$$1" output="&lt;outline&gt;\1&lt;/outline&gt;" dest="2">
+				<expression fixchars="1" trim="1">itemprop=&quot;description&quot;&gt;(.+?)&lt;a\shref=&quot;[^&quot;]*&quot;\s*&gt;Add\sa\sPlot</expression>
+			</RegExp>
 			<expression noclean="1" />
 		</RegExp>
 	</ParseIMDBOutline>
@@ -310,17 +313,14 @@
 	</ParseIMDBFullWriters>
 
 	<GetIMDBThumbsById dest="5">
-		<RegExp input="$$1" output="&lt;details&gt;&lt;url cache=&quot;$$1-posters.html&quot; function=&quot;ParseIMDBThumbs&quot;&gt;http://www.imdb.com/title/$$1/posters|accept-language=en-us&lt;/url&gt;&lt;/details&gt;" dest="5">
+		<RegExp input="$$1" output="&lt;details&gt;&lt;url cache=&quot;$$1-main.html&quot; function=&quot;ParseIMDBThumbs&quot;&gt;http://www.imdb.com/title/$$1/|accept-language=en-us&lt;/url&gt;&lt;/details&gt;" dest="5">
 			<expression noclean="1" />
 		</RegExp>
 	</GetIMDBThumbsById>
 	<ParseIMDBThumbs dest="5">
 		<RegExp input="$$6" output="&lt;details&gt;\1&lt;/details&gt;" dest="5">
-			<RegExp input="$$1" output="\1_SX1024_SY1024_\2" dest="4">
-				<expression noclean="1,2">&lt;a\sname=&quot;poster&quot;.*?src=&quot;(.*?)_S.*?(.jpg)&quot;.*?&lt;/a&gt;</expression>
-			</RegExp>
-			<RegExp input="$$4" output="&lt;thumb aspect=&quot;poster&quot;&gt;\1&lt;/thumb&gt;" dest="6">
-				<expression noclean="1">(.*?_SX[0-9]+_SY[0-9]+_.jpg)</expression>
+			<RegExp input="$$1" output="&lt;thumb aspect=&quot;poster&quot;&gt;\1\2.jpg&lt;/thumb&gt;" dest="6">
+				<expression noclean="1">Poster&quot;\s*src=&quot;(.*?)(_V._)</expression>
 			</RegExp>
 			<expression noclean="1" />
 		</RegExp>
@@ -403,6 +403,9 @@
 				</RegExp>
 				<RegExp input="$$1" output="\1" dest="11">
 					<expression clear="yes">&lt;td&gt;World-wide\s\(English[^&gt;]+&gt;[^&gt;]+&gt;([^&lt;]+)</expression>
+				</RegExp>
+				<RegExp input="$$1" output="\1" dest="11">
+					<expression clear="yes">&lt;td&gt;USA&lt;[^&gt;]+&gt;[^&gt;]+&gt;([^&lt;]+)</expression>
 				</RegExp>
 				<RegExp input="$$11" output="\1" dest="10">
 					<expression>(.+)</expression>
